<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/textView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpisIstrazivanje">

    <LinearLayout
        android:layout_width="374dp"
        android:layout_height="622dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewGodine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="Odaberi godine:"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/odabirGodina"
            android:layout_width="320dp"
            android:layout_height="37dp"
            android:layout_margin="10dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textViewIstrazivanje"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="Odaberi istraživanje:"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/odabirIstrazivanja"
            android:layout_width="320dp"
            android:layout_height="37dp"
            android:layout_margin="10dp" />

        <TextView
            android:id="@+id/textViewGrupa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="Odaberi grupu:"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/odabirGrupa"
            android:layout_width="320dp"
            android:layout_height="37dp"
            android:layout_margin="10dp" />

        <Button
            android:id="@+id/dodajIstrazivanjeDugme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="130dp"
            android:gravity="center"
            android:text="Upiši me" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>