<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.FragmentPredaj">


    <TextView
        android:id="@+id/progresTekst"
        android:layout_width="168dp"
        android:layout_height="93dp"
        android:layout_marginStart="121dp"
        android:layout_marginTop="209dp"
        android:layout_marginEnd="122dp"
        android:layout_marginBottom="429dp"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/dugmePredaj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="352dp"
        android:text="predaj"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progresTekst" />
</androidx.constraintlayout.widget.ConstraintLayout>